@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-30T08:26:56Z",
-  "count" : 82,
-  "count_minmax" : [ 57, 186 ],
+  "timestamp" : "2022-04-30T16:31:21Z",
+  "count" : 17,
+  "count_minmax" : [ 17, 186 ],
   "count_prev_day_inc" : 182,
   "count_prev_day_dec" : 153,
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 3 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
   "uniques_prev_day_inc" : 3,
   "uniques_prev_day_dec" : 0
 }
