@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-30T08:26:56Z",
-  "count" : 57,
-  "count_minmax" : [ 0, 57 ],
-  "count_prev_day_inc" : 119,
-  "count_prev_day_dec" : 104,
+  "timestamp" : "2022-04-30T16:31:21Z",
+  "count" : 117,
+  "count_minmax" : [ 0, 117 ],
+  "count_prev_day_inc" : 179,
+  "count_prev_day_dec" : 169,
   "uniques" : 1,
   "uniques_minmax" : [ 0, 1 ],
   "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 1
+  "uniques_prev_day_dec" : 2
 }
