@@ -1,11 +1,11 @@
 {
-  "count": 2484,
+  "count": 2479,
   "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 82,
-      "uniques": 2
+      "count": 17,
+      "uniques": 1
     },
     {
       "timestamp": "2022-04-17T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-04-30T00:00:00Z",
-      "count": 57,
+      "count": 117,
       "uniques": 1
     }
   ]
