@@ -1,3 +1,9 @@
+2022-04-30T16:31:21Z:
+* notice: last 14d: all unq: 2479 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 15265 410 / 17749 436
+* notice: next accum: outdated-all outdated-unq / all unq: 15265 410 / 17744 435
+* notice: prev json diff // prev day diff: unq all: +0 +60 / -1 -65 // +1 +179 / -2 -169
+
 2022-04-30T08:26:56Z:
 * notice: last 14d: all unq: 2484 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 15265 410 / 17754 435
